# speech-to-text-module

./: README.md  app.py  pyproject.toml  requirements.txt  setup.py  text.exemple.json
examples/: listen_microphone.py  record_test_file.py  transcribe_file.py
speech/: __init__.py  config.py  recorder.py  service.py  transcriber.py  vad.py
speech_module.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_service.py
